--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -14,7 +14,7 @@ $light-color-secondary: #000000;
 $light-color-body: #313131;
 $light-color-heading: #151515;
 $light-color-border: #cbced8;
-$light-color-bg-body: #f1f1f1;
+$light-color-bg-body:#f4f7fa;
 $light-color-bg-dark: #0c0e16;
 
 // Font Family
