--- a/src/styles/scss/basic/_typography.scss
+++ b/src/styles/scss/basic/_typography.scss
@@ -2,7 +2,7 @@
  * Typography
  */
 
-@import url("https://fonts.googleapis.com/css?family=Nunito:300,400,400i,600,700,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap");
 
 *,
 *::before,
